<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "ENTRENAPP"><!ENTITY author "MrGreen">]>
<resources>
    <string name="app_name" translatable="false">ENTRENAPP</string>
    <string name="welcome_message">Hola, bienvenido a <b>ENTRENAPP</b></string>
    <string name="login_message">Inicia sesión</string>
    <string name="register_message">Regístrate</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Contraseña</string>
    <string name="your_routines">Tus rutinas</string>
    <string name="action_search">Buscar</string>
    <string name="action_share">Compartir</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_settings">Configuraciones</string>
    <string name="difficulty_level">Nivel de dificultad:</string>
    <string name="difficult_beginner">Principiante</string>
    <string name="difficulty_intermediate">Intermedio</string>
    <string name="difficulty_advanced">Avanzado</string>
    <string name="time">Tiempo:</string>
    <string name="time_interval1" translatable="false">15-30</string>
    <string name="time_interval2" translatable="false">30-45</string>
    <string name="time_interval3" translatable="false">45-60</string>
    <string name="save">Guardar</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favourite">Favoritas</string>
    <string name="home">Principal</string>
    <string name="favourite_routines">Rutinas favoritas</string>
    <string name="myRoutines">Mis rutinas</string>
    <string name="action_back" translatable="false">back</string>
    <string name="recommended_routines">Rutinas recomendadas</string>
    <string name="contrasenia">Contraseña</string>
    <string name="login_user">Usuario</string>
    <string name="registrate"><u>Regístrate</u></string>
    <string name="Login_no_account">¿No tienes cuenta?</string>
    <string name="categor_a_del_ejercicio">Categoría del ejercicio</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="duraci_n">Duración</string>
    <string name="ninguna">Ninguna</string>
    <string name="baseUrl" translatable="false">http://entrenapp.com</string>
    <string name="RepetitionsTimes">veces</string>
    <string name="RepetitionTime">vez</string>
    <string name="second">segundo</string>
    <string name="seconds">segundos</string>
    <string name="minute">minutos</string>
    <string name="name">Nombre</string>
    <string name="type">Tipo</string>
    <string name="date">Fecha</string>
    <string name="category">Categoría</string>
    <string name="difficulty">Dificultad</string>
    <string name="equipacion">Equipamiento</string>
    <string name="yes">Sí</string>
    <string name="no" translatable="false">No</string>
    <string name="equipacionExtra">Equipacion extra</string>
    <string name="ninguno">Ninguno</string>
    <string name="filter">Filtrar</string>
    <string name="select_sport">Elige un deporte asociado:</string>


    <string name="rsg_ready">Listo</string>
    <string name="rsg_set">Preparado</string>
    <string name="rsg_go">Ya</string>

    <string name="current_exec_cycle">Repetición actual del ciclo</string>
    <string name="filter_success">Filtrado con éxito</string>
    <string name="leave_popup">Finalizar</string>
    <string name="leave_popup_without_rating">Finalizar sin puntuar</string>
    <string name="leave_popup_with_rating">Puntuar y finalizar</string>
    <string name="rate_routine">Puntúa tu rutina</string>

    <string name="new_cycle_alert">💬 Has terminado un ciclo. Se ha pausado la ejecución.</string>
    <string name="loading">Cargando…Por favor espera</string>


    <!--ERRORS-->
    <string name="error_login">El nombre de usuario o contraseña es incorrecto.</string>
    <string name="agregadoFavoritos">Rutina agregada a favoritos</string>
    <string name="eliminadaFavoritos">Rutina eliminada de favoritos</string>
    <string name="errorLogin">El usuario o la contraseña es incorrecta</string>
    <string name="noRoutineAvailable">No hay rutinas para mostrar.</string>
    <string name="unknown">Error desconocido</string>

    <string name="rookieDifficulty">Principiante</string>
    <string name="intermediateDifficulty">Intermedio</string>
    <string name="advancedDifficulty">Avanzado</string>

    <string name="train_now">Entrena ahora</string>
    <string name="train_later"><u>O mejor programa un entrenamiento a futuro</u></string>


    <string name="channel_name">Recordatorios de rutinas</string>
    <string name="channel_description">Recordar rutinas establecidas</string>
    <string name="reminder_routine">Elija días y hora</string>


    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="time_to_train">¡Es hora de entrenar!</string>
    <string name="routine_waiting_for_you">Programaste la rutina </string>
    <string name="reminder_set">Recordatorio programado</string>

    <string name="cycle_completed">Ciclo completado</string>

    <string name="action_sort">Ordenar</string>

    <string name="sort_by">Ordenar por:</string>
    <string name="no_sort">No ordenar</string>

    <string name="sort_ok">Ordenado con éxito</string>
    <string name="filter_ok">Filtrado con éxito</string>

    <string name="congrats">¡Has completado la rutina! ¡Bravo!</string>

    <string name="if_liked_msg">Si te gustó</string>
    <string name="youll_love_msg">entonces te encantará</string>
    <string name="no_thanks">No gracias</string>


    <string name="sure_proceed">¿Estás seguro de que deseas proceder?</string>
    <string name="action_will">Esta acción</string>
    <string name="restart_routine">reiniciará la rutina.</string>
    <string name="exit_routine">abandonará la rutina.</string>
    <string name="cancel">Cancelar</string>

    <string name="configuration">Ajustes</string>
    <string name="personal_data">Datos personales</string>
    <string name="appearence">Apariencia</string>
    <string name="timeFormat">Formato de tiempo</string>
    <string name="notifications">Notificaciones</string>
    <string name="notifications_modify"><u>Modificar configuración de notificaciones</u></string>
    <string name="routine_settings">Modo de ejecución</string>
    <string name="routine_simple">Sencillo</string>
    <string name="routine_detailed">Detallado</string>
    <string name="routine_execution_settings">Ejecución de la rutina</string>

    <string name="train">Entrenar</string>
    <string name="log_out">Log out</string>


</resources>