<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".mainActivity.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="69dp"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"></TextView>

    <Button
        android:id="@+id/btn_login"
        style="@style/roundedYellowButton"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:text="@string/login_message"
        android:drawableLeft="@drawable/ic_baseline_login_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/roundedTextBox"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_marginBottom="280dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/roundedTextBox"
        android:layout_width="361dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_user"
        android:drawableStart="@drawable/ic_baseline_people_alt_24"
        android:drawablePadding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>