<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="406dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="378dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty_level"
                    android:textColor="@color/accent"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/btn_difficulty_advanced"
                    style="@style/roundedWhiteButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty_advanced"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btn_difficulty_advanced_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty_advanced"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btn_difficulty_beginner"
                    style="@style/roundedWhiteButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficult_beginner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btn_difficulty_beginner_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficult_beginner"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btn_difficulty_intermediate"
                    style="@style/roundedWhiteButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty_intermediate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btn_difficulty_intermediate_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty_intermediate"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="406dp"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


                <TextView
                    android:id="@+id/time"
                    android:layout_width="373dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time"
                    android:textColor="@color/accent"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_interval1"
                    style="@style/roundedWhiteButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/time_interval1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <Button
                    android:id="@+id/btn_interval1_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="378dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/time_interval1"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <Button
                    android:id="@+id/btn_interval2"
                    style="@style/roundedWhiteButton"
                    android:layout_width="382dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="104dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time_interval2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <Button
                    android:id="@+id/btn_interval2_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="382dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="104dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time_interval2"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <Button
                    android:id="@+id/btn_interval3"
                    style="@style/roundedWhiteButton"
                    android:layout_width="381dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time_interval3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <Button
                    android:id="@+id/btn_interval3_yellow"
                    style="@style/roundedYellowButton"
                    android:layout_width="381dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time_interval3"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/roundedYellowButton"
                android:layout_width="388dp"
                android:layout_height="48dp"

                android:layout_marginTop="36dp"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>